# Puzzle

./: .gitignore  README.md
ComparatorTest/: .cproject  .project
ComparatorTest/src/: ComparatorTest.cpp
GobletGobbler/: .project
GobletGobbler/gobblers/: __main__.py
Mancala/: .project  :mem:  data.db  data.txt  example.db  memo.txt  pairs.db  pairs1.db  pairs2.db  pyproject.toml
Mancala/AnotherRule/: board.py
Mancala/Kalah/: __main__.py
Mancala/KeyinputTest/: __main__.py
Mancala/Mancala2p/: bitarray.py  bitset.py  generator.py  mancala2p.py  sqlite_blobkeydict.py  sqlite_int64pairs_set.py  sqlite_intpair_dict.py
Mancala/fuka/: __main__.py  algorithm.py  board.py  player.py
Mancala/fukaoriginal/: __main__.py  algorithm.py  board.py  player.py
Mancala/generator/: __main__.py  algorithm.py  board.py  game.py  player.py
Mancala/mancala/: __main__.py  algorithm.py  bitarray.py  board.py  log_6x2.txt  log_6x2_2.txt  mancala.py  memo.txt  player.py
Mancala/sqlite3dict/: blobdict.py  sqlite3schema.txt  sqlite_dict.py  sqlite_triple_dict_with_lru.py  test_blobdict.py
PySokoban/: .project  DrFogh-Archanfel-and-Joseph-L-Traub-Original-Extra-Sharpen.txt  DrFogh-Original-02.txt  DrFogh-Original01.txt  Mario Bonenfant.lp0  Thinking-Rabbit-Original-Plus-Extra.txt  floors.txt  floors.txt~  levels.txt
PySokoban/Curses_Test/: __main__.py
SpeedTest/: .project
TowerOfBrahman/: .project
eguchi.t_sudoku/: .pydevproject
eguchi.t_sudoku/sudoku/: bfs.py  (+3 more)
python-curses/: .project
sokoban-struct-test/: .cproject  .project
tajima_sokoban/: sokoban_1223.cpp
(+29 files in other folders)
